# simple-web-server

./: .gitignore  CERTIFICATEINSTRUCTIONS.md  MANIFEST.in  README.md  dockerfile  pyproject.toml  requirements.txt  setup.py
simplewebserver/: __main__.py  app.py  core.py  routes.py  util.py
simplewebserver/static/: jquery.dataTables.css  localhost.crt  localhost.key  open_sans_300.css  styles.css  styles.css.map  styles.scss
simplewebserver/templates/: base.html  login.html  path.html  play_media.html  view_text.html
